--- a/Frontend/login_resgister.ui
+++ b/Frontend/login_resgister.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>468</height>
+    <width>414</width>
+    <height>566</height>
    </rect>
   </property>
   <property name="sizeIncrement">
@@ -64,13 +64,13 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>284</width>
+          <width>0</width>
           <height>30</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>284</width>
+          <width>16777215</width>
           <height>30</height>
          </size>
         </property>
@@ -102,11 +102,11 @@
             <enum>Qt::Horizontal</enum>
            </property>
            <property name="sizeType">
-            <enum>QSizePolicy::Fixed</enum>
+            <enum>QSizePolicy::Expanding</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>148</width>
+             <width>240</width>
              <height>7</height>
             </size>
            </property>
@@ -122,13 +122,13 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>0</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>16777215</width>
+             <width>200</width>
              <height>30</height>
             </size>
            </property>
@@ -142,8 +142,12 @@
             <string notr="true">QPushButton {
 	border: none;
 }
+QPushButton::hover {
+	border: 1px solid #000;
+}
 #interact {
 	margin: 0;
+	padding: 0;
 }</string>
            </property>
            <property name="frameShape">
@@ -169,7 +173,7 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QPushButton" name="sleep">
+             <widget class="QPushButton" name="minimize_btn">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -179,7 +183,7 @@
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>30</height>
+                <height>28</height>
                </size>
               </property>
               <property name="maximumSize">
@@ -192,13 +196,13 @@
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="View/img/resourec.qrc">
-                <normaloff>:/icon/minus.png</normaloff>:/icon/minus.png</iconset>
+               <iconset resource="View/img/resources.qrc">
+                <normaloff>:/img/icon/minus.png</normaloff>:/img/icon/minus.png</iconset>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="adjust_size">
+             <widget class="QPushButton" name="maximize_btn">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -208,7 +212,7 @@
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>30</height>
+                <height>28</height>
                </size>
               </property>
               <property name="maximumSize">
@@ -227,13 +231,13 @@
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="View/img/resourec.qrc">
-                <normaloff>:/icon/stack-svgrepo-com.svg</normaloff>:/icon/stack-svgrepo-com.svg</iconset>
+               <iconset resource="View/img/resources.qrc">
+                <normaloff>:/img/icon/stack-svgrepo-com.svg</normaloff>:/img/icon/stack-svgrepo-com.svg</iconset>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="close">
+             <widget class="QPushButton" name="close_btn">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -243,7 +247,7 @@
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>30</height>
+                <height>28</height>
                </size>
               </property>
               <property name="maximumSize">
@@ -256,8 +260,8 @@
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="View/img/resourec.qrc">
-                <normaloff>:/icon/x.png</normaloff>:/icon/x.png</iconset>
+               <iconset resource="View/img/resources.qrc">
+                <normaloff>:/img/icon/x.png</normaloff>:/img/icon/x.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -292,6 +296,14 @@
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item alignment="Qt::AlignHCenter">
            <widget class="QFrame" name="image_frame">
+            <property name="styleSheet">
+             <string notr="true">#image_framel {
+	align-items: center;
+ 	 justify-content: center;
+  	display: flex;
+	  font-size: 1.5rem;
+}</string>
+            </property>
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
@@ -315,34 +327,104 @@
               <number>0</number>
              </property>
              <item>
-              <widget class="QLabel" name="label">
-               <property name="minimumSize">
-                <size>
-                 <width>60</width>
-                 <height>60</height>
-                </size>
+              <widget class="QFrame" name="register_label_frame">
+               <property name="frameShape">
+                <enum>QFrame::StyledPanel</enum>
                </property>
-               <property name="maximumSize">
-                <size>
-                 <width>60</width>
-                 <height>60</height>
-                </size>
+               <property name="frameShadow">
+                <enum>QFrame::Raised</enum>
                </property>
-               <property name="sizeIncrement">
-                <size>
-                 <width>30</width>
-                 <height>30</height>
-                </size>
-               </property>
-               <property name="text">
-                <string/>
-               </property>
-               <property name="pixmap">
-                <pixmap resource="View/img/resourec.qrc">:/img/logo/dark_pythonLogo.png</pixmap>
-               </property>
-               <property name="scaledContents">
-                <bool>true</bool>
-               </property>
+               <layout class="QVBoxLayout" name="verticalLayout_7">
+                <property name="rightMargin">
+                 <number>9</number>
+                </property>
+                <item>
+                 <widget class="QFrame" name="frame_3">
+                  <property name="frameShape">
+                   <enum>QFrame::StyledPanel</enum>
+                  </property>
+                  <property name="frameShadow">
+                   <enum>QFrame::Raised</enum>
+                  </property>
+                  <property name="lineWidth">
+                   <number>0</number>
+                  </property>
+                  <layout class="QHBoxLayout" name="horizontalLayout_3">
+                   <property name="spacing">
+                    <number>0</number>
+                   </property>
+                   <property name="leftMargin">
+                    <number>0</number>
+                   </property>
+                   <property name="topMargin">
+                    <number>0</number>
+                   </property>
+                   <property name="rightMargin">
+                    <number>0</number>
+                   </property>
+                   <property name="bottomMargin">
+                    <number>0</number>
+                   </property>
+                   <item>
+                    <widget class="QLabel" name="image_label">
+                     <property name="minimumSize">
+                      <size>
+                       <width>60</width>
+                       <height>60</height>
+                      </size>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>60</width>
+                       <height>60</height>
+                      </size>
+                     </property>
+                     <property name="sizeIncrement">
+                      <size>
+                       <width>30</width>
+                       <height>30</height>
+                      </size>
+                     </property>
+                     <property name="text">
+                      <string/>
+                     </property>
+                     <property name="pixmap">
+                      <pixmap resource="View/img/resources.qrc">:/img/logo/dark_pythonLogo.png</pixmap>
+                     </property>
+                     <property name="scaledContents">
+                      <bool>true</bool>
+                     </property>
+                     <property name="wordWrap">
+                      <bool>false</bool>
+                     </property>
+                     <property name="indent">
+                      <number>-1</number>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLabel" name="label">
+                  <property name="font">
+                   <font>
+                    <family>Tw Cen MT Condensed Extra Bold</family>
+                    <pointsize>15</pointsize>
+                   </font>
+                  </property>
+                  <property name="text">
+                   <string>Create an account</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignCenter</set>
+                  </property>
+                  <property name="margin">
+                   <number>0</number>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </widget>
              </item>
             </layout>
@@ -440,11 +522,14 @@
               </widget>
              </item>
              <item>
-              <widget class="QDateEdit" name="DateOfBirth">
-               <property name="showGroupSeparator" stdset="0">
-                <bool>false</bool>
+              <widget class="QLineEdit" name="Enterprise_id">
+               <property name="placeholderText">
+                <string>Enter Enterprise ID</string>
                </property>
               </widget>
+             </item>
+             <item>
+              <widget class="QDateEdit" name="DateOfBirth"/>
              </item>
              <item>
               <widget class="QLineEdit" name="Password">
@@ -463,7 +548,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QLineEdit" name="lineEdit_5">
+              <widget class="QLineEdit" name="Confirm_password">
                <property name="echoMode">
                 <enum>QLineEdit::Password</enum>
                </property>
@@ -476,13 +561,118 @@
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="frame_4">
+           <widget class="QFrame" name="submit_frame">
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
             </property>
+            <layout class="QVBoxLayout" name="verticalLayout_6">
+             <item>
+              <widget class="QFrame" name="btn_frame">
+               <property name="frameShape">
+                <enum>QFrame::StyledPanel</enum>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Raised</enum>
+               </property>
+               <layout class="QHBoxLayout" name="horizontalLayout_4">
+                <property name="spacing">
+                 <number>0</number>
+                </property>
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <item>
+                 <widget class="QPushButton" name="register_btn">
+                  <property name="font">
+                   <font>
+                    <family>Segoe UI Semibold</family>
+                    <pointsize>11</pointsize>
+                    <weight>75</weight>
+                    <bold>true</bold>
+                   </font>
+                  </property>
+                  <property name="text">
+                   <string>Sign up</string>
+                  </property>
+                  <property name="iconSize">
+                   <size>
+                    <width>16</width>
+                    <height>16</height>
+                   </size>
+                  </property>
+                  <property name="autoRepeat">
+                   <bool>false</bool>
+                  </property>
+                  <property name="autoDefault">
+                   <bool>false</bool>
+                  </property>
+                  <property name="default">
+                   <bool>false</bool>
+                  </property>
+                  <property name="flat">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+             <item>
+              <widget class="QFrame" name="signin">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="frameShape">
+                <enum>QFrame::StyledPanel</enum>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Raised</enum>
+               </property>
+               <layout class="QHBoxLayout" name="horizontalLayout_5">
+                <property name="spacing">
+                 <number>0</number>
+                </property>
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <item>
+                 <widget class="QLabel" name="label_2">
+                  <property name="text">
+                   <string>Already have account? Sign in</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignCenter</set>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
@@ -496,7 +686,8 @@
   </layout>
  </widget>
  <resources>
-  <include location="View/img/resourec.qrc"/>
+  <include location="View/img/resources.qrc"/>
+  <include location="C:/Users/Admin/.designer/backup/View/img/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
